--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "connect": "^3.5.1",
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "request": "^2.81.0"
   }
 }
