--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "connect": "^3.5.1",
     "express": "^4.14.1",
     "lodash": "^4.17.4",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "yargs": "^10.0.3"
   }
 }
