--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "lodash": "^4.17.4",
     "request": "^2.81.0",
     "yargs": "^10.0.3"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.1",
+    "typescript": "^3.9.2"
   }
 }
