--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node ./src/index.ts"
   },
   "author": "Nitin Reddy <reddynitin3@gmail.com>",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "express": "^4.14.1",
     "lodash": "^4.17.4",
     "request": "^2.81.0",
+    "ts-node": "^10.8.0",
     "yargs": "^10.0.3"
   },
   "devDependencies": {
