--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "connect": "^3.5.1",
     "express": "^4.14.1",
     "lodash": "^4.17.4",
+    "node-fetch": "^3.2.5",
     "request": "^2.81.0",
     "ts-node": "^10.8.0",
     "yargs": "^10.0.3"
